--- a/scss/base/_colors.config.scss
+++ b/scss/base/_colors.config.scss
@@ -16,6 +16,9 @@ $colors: (
   action: brand,
   focus: brand (shade: 15%),
 
+  logo-dark: #b32356,
+  logo-light: #cb8129,
+
   contrast-dark: 'black',
   contrast-light: 'white',
 );
