--- a/templates/components/_box.html.j2
+++ b/templates/components/_box.html.j2
@@ -1,6 +1,6 @@
 <!-- Box -->
 
-<a href="http://www.springgunpress.com/riding-sidesaddle-eric-suzanne/" class="box section">
+<a href="http://www.springgunpress.com/riding-sidesaddle-eric-suzanne/" class="box section link-section">
 <b class="fake-button">
   Get yours before we run out!
 </b>
