--- a/templates/components/_oddbook.html.j2
+++ b/templates/components/_oddbook.html.j2
@@ -1,20 +1,20 @@
 
 <article class="oddbook section">
 <div class="section-inner">
-  <a href="http://oddbooksapp.com/book/ridingsidesaddle">
+  <a href="http://www.oddbooksapp.com/book/ridingsidesaddle">
     {% include 'svg/_oddbooks.svg' %}
   </a>
 
   <p>
     Riding SideSaddle*
-    was written using the <a href="http://oddbooksapp.com">OddBooks</a> editor,
-    and is <a href="http://oddbooksapp.com/book/ridingsidesaddle">available online</a>
+    was written using the <a href="http://www.oddbooksapp.com">OddBooks</a> editor,
+    and is <a href="http://www.oddbooksapp.com/book/ridingsidesaddle">available online</a>
     with aditional multimedia features (still in development),
     including links, tags, animations, music,
     and tools for open-source collaboration.
   </p>
 
-  <a href="http://oddbooksapp.com/book/ridingsidesaddle" class="fake-button">
+  <a href="http://www.oddbooksapp.com/book/ridingsidesaddle" class="fake-button">
     Read it online!
   </a>
 </div>
