--- a/templates/_rst.html.j2
+++ b/templates/_rst.html.j2
@@ -5,7 +5,7 @@
 {%- endfor -%}
 
 <article class="page section">
-<div class="section-inner">
+<div class="container">
   {%- if not config.hide_title %}
     {{ rst.html_title }}
   {%- endif %}
