--- a/templates/components/_blurb.html.j2
+++ b/templates/components/_blurb.html.j2
@@ -1,8 +1,14 @@
 <!-- Book Blurbs -->
 
 {% if config.blurbs %}
-<article class="blurbs section">
-<div class="section-inner">
+<article class="blurb section">
+<div class="container">
+  <h2 class="section-title">
+    <a href="https://www.dropbox.com/sh/hernur1iocol84n/AADgWeHZLaCL0YuRA5MP6mMXa?dl=0" class="title-link">
+      Get the <b>Press Kit</b> »
+    </a>
+  </h2>
+
 {% for blurb in config.blurbs %}
 
   <figure class="blurb">
