--- a/templates/components/_intro.html.j2
+++ b/templates/components/_intro.html.j2
@@ -1,34 +1,31 @@
-<!-- Book Intro -->
+<!-- Intro -->
 
 <article class="intro section">
-<div class="section-inner">
-  <blockquote class="pullquote">
-    <p>
-      Sam gasps for air and finds herself alone.
-      Herman gasps for air and finds herself alone.
-      They wipe the mud from their body.
-    </p>
-  </blockquote>
+<div class="container">
+  <h2 class="section-title">
+    <a href="http://www.springgunpress.com/riding-sidesaddle-eric-suzanne/" class="title-link">
+      Order yours now!
+    </a>
+  </h2>
 
   <p class="description">
     <b>{{ config.title }}</b> is
-    an
-    <a href="https://github.com/ericam/ridingsidesaddle.net">open-source novel</a>
-    on notecards —
     a fragmented memory of our time together,
     and these bodies we inhabit —
-    created by <a href="http://ericsuzanne.com">Eric Suzanne</a>,
-    with contributions from
-    <a href="http://jacobliechty.tumblr.com/">Jacob Liechty</a>,
-    <a href="http://sondraedesign.tumblr.com/">Sondra Eby</a>,
-    <a href="http://aaronliechty.tumblr.com/">Aaron Liechty</a>,
-    and others.
-    Published by
-    <a href="http://springgunpress.com">SpringGun Press</a>,
-    and made available under the
+    an
     <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
-      Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License
-    </a>.
+      open-source novel
+    </a>
+    published on note cards by
+    <a href="http://springgunpress.com">SpringGun Press</a>,
+    written and
+    <a href="http://oddbooksapp.com/book/ridingsidesaddle">released online</a>
+    using
+    <a href="http://oddbooksapp.com/">OddBooks</a>,
+    and occasioally performed with music by
+    <a href="http://teacupgorilla.com">Teacup Gorilla</a>
+    and
+    <a href="http://jkandtheloss.com">Jen Korte</a>.
   </p>
 </div>
 </article>
