--- a/templates/components/_oddbook.html.j2
+++ b/templates/components/_oddbook.html.j2
@@ -1,6 +1,12 @@
 
 <article class="oddbook section">
-<div class="section-inner">
+<div class="container">
+  <h2 class="section-title">
+    <a href="http://www.oddbooksapp.com/book/ridingsidesaddle" class="title-link">
+      Read it online!
+    </a>
+  </h2>
+
   <a href="http://www.oddbooksapp.com/book/ridingsidesaddle">
     {% include 'svg/_oddbooks.svg' %}
   </a>
@@ -13,9 +19,5 @@
     including links, tags, animations, music,
     and tools for open-source collaboration.
   </p>
-
-  <a href="http://www.oddbooksapp.com/book/ridingsidesaddle" class="fake-button">
-    Read it online!
-  </a>
 </div>
 </article>
