--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -3,7 +3,17 @@
 
 .section {
   border-bottom: 2px dashed color(brand);
-  padding: size(gutter)*3 0;
+  position: relative;
+}
+
+.inner {
+  overflow: hidden;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 45rem;
+  padding: size(gutter)*4 size(gutter);
   transition: all 300ms;
 
   @include at(45em) {
@@ -11,29 +21,25 @@
   }
 }
 
-.section-inner {
-  margin: 0 auto;
-  max-width: 45rem;
-  padding: size(gutter);
-}
-
 h1 {
   @include relative-font(9vw, h1);
   color: color(brand);
 }
 
+b {
+  font-weight: bold;
+}
 
-// Home
-// ----
-
-@mixin button-ish {
+@mixin button {
   &,
   #{$link} {
     background: color(background);
     border: 2px solid color(action);
     border-radius: size(corners);
+    display: inline-block;
     font-weight: bold;
     padding: size(shim) size(spacer);
+    text-align: center;
     transition: all 150ms;
   }
 
@@ -49,11 +55,32 @@ h1 {
   }
 }
 
+.section-title {
+  left: 50%;
+  position: absolute;
+  top: 0;
+  transform: translate3d(-50%, -50%, 0);
+  white-space: nowrap;
+  z-index: 10;
+}
+
+.title-link {
+  @include button;
+  min-width: 10%;
+}
+
+
+// Home
+// ----
+
 .page {
   @include at(45em) {
     background: url('../images/cover.jpg') no-repeat scroll top right;
     background-size: auto 100%;
-    padding: 25vh 0;
+
+    .container {
+      padding: 25vh size(gutter);
+    }
   }
 
   em {
@@ -67,24 +94,46 @@ h1 {
   }
 
   [href*='springgunpress.com'] {
-    @include button-ish;
+    @include button;
   }
 }
 
 
-// Release
-// -------
+// Bookstore
+// ---------
 
-.release {
-  background: linear-gradient(to top, color(overlay) size(rhythm)*6, color(overlay (rgba: 0)) size(rhythm)*14) no-repeat scroll,
+.bookstore {
+  min-height: 60vh;
+
+  .map,
+  .map-overlay {
+    @include stretch;
+    height: 100%;
+    width: 100%;
+  }
+
+  .map-overlay {
+    z-index: 2;
+  }
+}
+
+
+// Tour
+// ----
+
+.tour {
+  background: linear-gradient(to top, color(overlay) size(rhythm)*6, color(overlay (rgba: 0)) size(rhythm)*10) no-repeat scroll,
               url('../images/tg-jen.jpg') no-repeat scroll;
   background-clip: padding-box;
   background-size: cover;
-  padding: size(gutter)*5 0 size(gutter);
   position: relative;
 
-  @include at(45em) {
-    padding: 50vh 0 size(gutter);
+  .container {
+    padding: size(gutter)*8 size(gutter) size(gutter)*2;
+
+    @include at(45em) {
+      padding: 60vh size(gutter) size(gutter)*3;
+    }
   }
 
   .p-name {
@@ -92,85 +141,16 @@ h1 {
     margin-bottom: size(shim);
   }
 
-  .sub {
-    font-variant: small-caps;
-  }
-
   a {
     #{$link} {
-      font-variant: normal;
       font-weight: bold;
     }
   }
 }
 
-.call-to-action {
-  @include relative-font(5vw, h3);
-  background: color(background);
-  border: 2px solid color(brand);
-  font-weight: bold;
-  left: 50%;
-  padding: size(gutter);
-  position: absolute;
-  top: 0;
-  transform: translate3d(-50%, -50%, 0);
-  white-space: nowrap;
-}
 
-.p-summary {
-  font-variant: small-caps;
-}
-
-.presenters {
-  font-variant: small-caps;
-
-  a {
-    #{$link} {
-      @include relative-font(9vw, h1);
-    }
-  }
-}
-
-.event-details {
-  list-style: disc;
-  margin: size(shim) 0;
-}
-
-.press-kit {
-  #{$link} {
-    background: color(background);
-    border: 2px solid color(action);
-    color: color(text);
-    display: inline-block;
-    left: 50%;
-    padding: size(gutter);
-    position: absolute;
-    top: 100%;
-    transform: translate3d(-50%, -50%, 0);
-    transition: all 300ms;
-  }
-
-  #{$focus} {
-    text-decoration: none;
-    transform: translate3d(-50%, -50%, 0) scale(1.25);
-  }
-
-  b {
-    color: color(action);
-  }
-}
-
-
-// intro
-// -----
-
-.intro {
-  overflow: hidden;
-
-  b {
-    font-weight: bold;
-  }
-}
+// Excerpt
+// -------
 
 .pullquote {
   @include relative-font(4vw, 24px, 1.5);
@@ -212,7 +192,6 @@ h1 {
     }
   }
 
-
   p {
     @include stretch;
     align-items: center;
@@ -220,12 +199,6 @@ h1 {
     justify-content: center;
     padding: 0 15%;
   }
-}
-
-.description {
-  @extend %boilerplate;
-  color: color(light);
-  margin: 0 size(gutter)*2;
 }
 
 
@@ -262,54 +235,22 @@ h1 {
 }
 
 
-// Box
-// ---
+// Intro
+// -----
 
-.box {
-  #{$link} {
-    background: url('../images/box.jpg') no-repeat scroll center;
-    background-size: cover;
-    height: 0;
-    padding-top: size(spacer)*6;
+.intro {
+  background: url('../images/open-box.jpg') no-repeat scroll center;
+  background-size: cover;
 
-    @include at(40em) {
-      padding-top: percentage(300/1000);
+  .container {
+    @include at(45em) {
+      margin: 0 10% 0 40%;
+      padding: 25vh size(gutter);
     }
   }
 
-  .fake-button {
-    left: 50%;
-    max-width: 25rem;
-    position: absolute;
-    text-align: center;
-    top: 0;
-    transform: translate3d(-50%, -50%, 0);
-    width: 90%;
-  }
-}
-
-
-// Link Section
-// ------------
-
-.link-section {
-  #{$link} {
-    display: block;
-    position: relative;
-  }
-
-  #{$focus} {
-    outline: 0;
-    text-decoration: none;
-
-    .fake-button {
-      text-decoration: underline;
-    }
-  }
-
-  .fake-button {
-    @include button-ish;
-    display: inline-block;
+  .description {
+    @extend %boilerplate;
   }
 }
 
@@ -318,21 +259,8 @@ h1 {
 // -------
 
 .oddbook {
-  position: relative;
-
   p {
     padding: size(gutter) size(spacer)*2;
-  }
-
-  .fake-button {
-    @include button-ish;
-    left: 50%;
-    max-width: 14rem;
-    position: absolute;
-    text-align: center;
-    top: 0;
-    transform: translate3d(-50%, -50%, 0);
-    width: 90%;
   }
 }
 
