--- a/templates/components/_intro.html.j2
+++ b/templates/components/_intro.html.j2
@@ -12,20 +12,23 @@
     <b>{{ config.title }}</b> is
     a fragmented memory of our time together,
     and these bodies we inhabit —
-    an
+    250 interchangeable index cards
+    following a cast of friends as they navigate
+    fluid genders, relationships,
+    and bodies that resist order, category, or completion.
+    Based loosely on the life of Margaret Clap,
+    and the myths of Hermaphroditus —
+    SideSaddle* is an
     <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
       open-source novel
     </a>
-    published on note cards by
+    published by
     <a href="http://springgunpress.com">SpringGun Press</a>,
-    written and
     <a href="http://oddbooksapp.com/book/ridingsidesaddle">released online</a>
-    using
-    <a href="http://oddbooksapp.com/">OddBooks</a>,
-    and occasioally performed with music by
-    <a href="http://teacupgorilla.com">Teacup Gorilla</a>
-    and
-    <a href="http://jkandtheloss.com">Jen Korte</a>.
+    as an
+    <a href="http://oddbooksapp.com/">OddBook</a>,
+    and performed with music by
+    <a href="http://teacupgorilla.com">Teacup Gorilla</a>.
   </p>
 </div>
 </article>
