--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
   <p class="copyright">
     <strong>{{ config.title }}</strong>
     © {{ config.copyright }}
-    <a href="http://ericsuzanne.com" class="p-name">
+    <a href="http://miriamsuzanne.com" class="p-name">
       {{ config.author_full }}
     </a>
     |
